2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexTxt2tags.cxx, scintilla/makefile.win32,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   data/filetypes.txt2tags, wscript:
   Add lexer for Txt2Tags (patch by Forgeot Eric, #3020632).


2010-08-21  Frank Lanitz  <frank@frank.uvena.de>

 * src/plugindata.h:
   Apply a patch by Jiří Techet which is preventing warnings when using
   -Wmissing-prototypes on compiling. Thanks.


2010-08-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/KeyWords.cxx:
   Link Octave instead of Matlab.
   Add comment about not being autogenerated.
   Minor changes to fit Scintilla order.
 * src/build.c, src/build.h:
   Replace GeanyBuildCommand::entries array with separate fields.
   Similar to r5077 in the bs2 branch, but with less loop unrolling.
 * src/build.c:
   Remove buildcmd_* accessor functions.


2010-08-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/editor.c:
   Use Octave lexer instead of Matlab to support Octave # comment char.


2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Fix segfault on Tools->Reload Configuration when no documents are
   open (#3037079).
 * scintilla/LexMarkdown.cxx:
   Fix infinite loop in Markdown lexer (patch by Colomban Wendling,
   thanks).
 * src/build.c:
   Fix saving non-project filetype error regex.
 * src/build.c:
   Fix memory leak in read_regex().


2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Check for libsocket on OpenSolaris to fix build.
 * src/encodings.c:
   Rewrite the logic to auto detect encodings a bit to make it more
   readable and fix a slightly wrong detection on Windows
   (closes #3019573).
 * plugins/geanyfunctions.h, src/editor.c, src/plugindata.h,
   src/plugins.c: