@@ -5,6 +5,8 @@
    scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
    data/filetypes.txt2tags, wscript:
    Add lexer for Txt2Tags (patch by Forgeot Eric, #3020632).
+ * m4, m4/intltool.m4, configure.ac, Makefile.am:
+   Use AC_CONFIG_MACRO_DIR (patch by Erik de Castro Lopo, thanks).
 
 
 2010-08-21  Frank Lanitz  <frank@frank.uvena.de>
